<resources>
    <string name="app_name">Remind Me</string>
    <string name="search_title">Search</string>
    <string name="notification">Notification</string>
    <string name="liked">Liked</string>
    <string name="folder">Store</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="history">History</string>
    <string name="todo">To do</string>
    <string name="birthday">birthday</string>
    <string name="ideas">ideas</string>
</resources>
