<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/notification"
            android:id="@+id/notification"/>
        <item
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/liked" />
        <item
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/folder" />
        <item
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/settings" />
        <item
            android:icon="@drawable/ic_error_outline_black_24dp"
            android:title="@string/information" />
    </group>
</menu>